--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.5",
+        "autoprefixer": "^10.4.4",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.12",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.49.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.0.23"
     }
 }
